--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dir-bunny": "./bin/index.js"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint ./"
     },
     "keywords": [],
     "author": "Shibi Suriya P",
