--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dir-bunny",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "",
     "main": "index.js",
     "bin": {
@@ -10,7 +10,13 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "eslint ./"
     },
-    "keywords": [],
+    "keywords": [
+        "dotfiles",
+        "fzf",
+        "zoxide",
+        "autojump",
+        "z"
+    ],
     "author": "Shibi Suriya P",
     "type": "module",
     "license": "ISC",
